[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/scenes/Credits.gd" type="Script" id=1]
[ext_resource path="res://assets/textures/space_background.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/Kenney High.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/scenes/screen_fade/ScreenFade.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/audio/music/opening_bgm.ogg" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=1]
size = 52
font_data = ExtResource( 3 )

[node name="Credits" type="Node"]
script = ExtResource( 1 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 800, 600 )

[node name="space_background" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 400, 300 )
texture = ExtResource( 2 )

[node name="CreditsText" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -372.0
margin_top = -269.0
margin_right = 373.0
margin_bottom = 268.0
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="ScreenFade" parent="." instance=ExtResource( 4 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
